# OVRXIN

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.bat
src/: AppManifest.cpp  AppManifest.h  CMakeLists.txt  UIWrapper.cpp  UIWrapper.h  main.cpp
src/include/: CMakeLists.txt
src/ovrinput/: ivrinput.cpp  ivrinput.h  ivrinput_action.h  ivrinput_action_set.h  ivrinput_input_source.h  ivrinput_manifest.h
src/package_files/: action_manifest.json  manifest.vrmanifest
src/package_files/Licenses/: OVRXIN.txt
src/package_files/default_action_manifests/: default_knuckles.json
